--- a/java/sdk-advanced/message-expire/app/src/main/res/layout/activity_access.xml
+++ b/java/sdk-advanced/message-expire/app/src/main/res/layout/activity_access.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:gravity="center"
-    tools:context=".ui.SenderActivity">
+    tools:context="com.ionic.tutorials.SenderActivity">
 
     <ProgressBar
         android:id="@+id/progress"
